# shader_brot

./: .gitattributes  Cargo.toml  README.md  TODO.md
resources/: basic_330.glslv  fractal.glslf  vertex.glslv
src/: direction.rs  lib.rs  main.rs
