[package]
name = "ggez-shader"
description = "Using ggez crate for the front end, and glsl shader for rendering."
license = "MPL-2.0"
version = "0.1.0"
authors = ["Ben-PHb <benphawke@gmail.com>"]
edition = "2018"

[dependencies]
num-complex = "0.2.1"
ggez = "0.5.0-rc.1"
gfx = "0.18"
cgmath = {version = "0.17", features = ["mint"]}
image = "0.21.0"

time = "0.1.41"
